Implemento navegacion del listado de peliculas al detalle de pelicula optimizando las consultas SQL con un JOIN (metodo select_related de Django)

--- a/src/movies/templates/home.html
+++ b/src/movies/templates/home.html
@@ -7,9 +7,11 @@
 <body>
 
   <h1>Welcome to IPDB !!</h1>
-{% for movie in movies %}
-  <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.title }}" height="300px">
-{% endfor %}
+  {% for movie in movies %}
+      <a href="{% url 'movie_detail_page' movie.pk %}" title="{{ movie.title }}">
+          <img src="{{ movie.image }}" alt="{{ movie.title }}" title="{{ movie.title }}" height="300px">
+      </a>
+  {% endfor %}
 
 </body>
 </html>
