--- a/src/movies/templates/base.html
+++ b/src/movies/templates/base.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="menu">
-        <a href="{% url 'home_page' %}">Inicio</a>
+        <a href="{% url 'home_page' %}">Inicio | </a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout_page' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login_page' %}">Login</a>
+        {% endif %}
+        <hr>
     </div>
     {% block content %} {% endblock %}
 </body>
